...
        </array>
    </customFonts>
    <scenes>
        <!--MilLife View Controller-->
        <scene sceneID="wg7-f3-ORb">
            <objects>
                <viewController storyboardIdentifier="GuidesVC_sbid" title="MilLife Guides" modalTransitionStyle="crossDissolve" id="8rJ-Kc-sve" userLabel="MilLife View Controller" customClass="MilLifeGuidesController" customModule="My_Military_OneSource" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6pj-m1-Euc" customClass="CustomNavigationBar" customModule="My_Military_OneSource" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="44" width="414" height="64"/>
...
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                <color key="textColor" red="0.098039215690000001" green="0.28235294119999998" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0LJ-ep-0oL">
                                                <rect key="frame" x="217" y="63" width="120" height="46"/>
                                                <accessibility key="accessibilityConfiguration" label="viewAll"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="120" id="O1f-Q2-r7f"/>
                                                    <constraint firstAttribute="height" constant="46" id="Qcs-yE-Rk0"/>
                                                </constraints>
                                                <inset key="titleEdgeInsets" minX="0.0" minY="-7" maxX="0.0" maxY="0.0"/>
                                                <state key="normal" title="View All" backgroundImage="category_btn">
                                                    <color key="titleColor" red="0.098039215690000001" green="0.28235294119999998" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <state key="selected" backgroundImage="category_btn_focused">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
...
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xj7-Uu-hG5" userLabel="GuidesTableView">
                                <rect key="frame" x="0.0" y="108" width="414" height="739"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Puf-ux-eYK">
                                        <rect key="frame" x="20" y="14" width="24" height="24"/>
                                        <accessibility key="accessibilityConfiguration" label="Back"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="24" id="AA0-nH-ULT"/>
                                            <constraint firstAttribute="width" constant="24" id="Uk6-9n-qGG"/>
                                        </constraints>
                                        <state key="normal" backgroundImage="back_blue"/>
                                        <connections>
...
