...
        
        case "CONNECT":
                print("Connect")
                tabBarController!.selectedIndex = 4
        
        case "ABOUT US":
                print("About Us")
                //tabBarController!.selectedIndex = 4
           
        default:
            print("selected type: ", mySelCardType)
            
            
...
